Closed
Bug 426852
Opened 18 years ago
Closed 18 years ago
flash object disappear after going back
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9
People
(Reporter: mr_zombie, Assigned: MatsPalmgren_bugz)
References
()
Details
(Keywords: crash, regression)
Attachments
(1 file)
|
2.18 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; pl; rv:1.9b5) Gecko/2008032620 Firefox/3.0b5
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; pl; rv:1.9b5) Gecko/2008032620 Firefox/3.0b5
When I leave a site that includes a flash object, and then return to the site through back/forward buttons on toolbar, all flash objects on the website dissapear - it looks as if there were no such objects on the page. The flash objects appear again when one hit Reload button or enter the site again by typing url.
Reproducible: Always
Steps to Reproduce:
1.enter the site that includes flash object(s)
2.leave the site
3.return to the site by clicking back/forward button or [Backspace].
Actual Results:
If the site contained flash objects, they were not rendered at all.
Expected Results:
If the site contained flash objects, they should be rendered.
Comment 1•18 years ago
|
||
Confirmed with latest trunk on Windows XP. I've seen this too and I also noticed that sometimes if you don't expect it anymore the film starts to play suddenly.
Regression window is
http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1206461580&maxdate=1206467519
so it seems to be caused by Bug 420886.
Blocks: 420886
Status: UNCONFIRMED → NEW
Component: General → Plug-ins
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
QA Contact: general → plugins
Version: unspecified → Trunk
Comment 2•18 years ago
|
||
(In reply to comment #1)
> if you don't expect it anymore the film starts to play
> suddenly.
>
Only rarely.
Updated•18 years ago
|
Flags: blocking1.9?
Comment 3•18 years ago
|
||
+'ing as it appears to be a regression from the flash + modal dialog blocker.
Mats?
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Comment 5•18 years ago
|
||
This can even lead to a crash if JavaScript on the page tries to access the plug-in. See Bug 426942, which was marked as duplicate of this bug.
| Assignee | ||
Comment 6•18 years ago
|
||
I can reproduce this bug, and the crash in bug 426942.
I have something that appears to fix both problems...
Assignee: nobody → mats.palmgren
Severity: normal → critical
Keywords: crash
Target Milestone: --- → mozilla1.9
| Assignee | ||
Comment 7•18 years ago
|
||
This limits the delay path from StopPlugin() to the Real-plugin only,
other plugins are not delayed - as before bug 420886. The delay is
only needed for the additional STR in bug 420886 comment 15.
Test builds are available here:
https://build.mozilla.org/tryserver-builds/2008-04-04_19:47-mpalmgren@mozilla.com-426852_patch1/
Attachment #313767 -
Flags: superreview?(jst)
Attachment #313767 -
Flags: review?(jst)
Comment 8•18 years ago
|
||
(In reply to comment #7)
> Test builds are available here:
> https://build.mozilla.org/tryserver-builds/2008-04-04_19:47-mpalmgren@mozilla.com-426852_patch1/
>
I used it for some hours and it solves the problem (Windows XP).
Comment 9•18 years ago
|
||
(In reply to comment #8)
I meant the Back problem.
Comment 10•18 years ago
|
||
Tested patch build with XStandard plug-in on Vista and OS X 10.4.6 - it appears that the patch fixed the problem. Thank you!
Updated•18 years ago
|
Summary: flash object disappear → flash object disappear after going back
Updated•18 years ago
|
Attachment #313767 -
Flags: superreview?(jst)
Attachment #313767 -
Flags: superreview+
Attachment #313767 -
Flags: review?(jst)
Attachment #313767 -
Flags: review+
Updated•18 years ago
|
Whiteboard: [needs landing]
Comment 14•18 years ago
|
||
Checking in layout/generic/nsObjectFrame.cpp;
/cvsroot/mozilla/layout/generic/nsObjectFrame.cpp,v <-- nsObjectFrame.cpp
new revision: 1.649; previous revision: 1.648
done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
Updated•18 years ago
|
OS: Windows XP → All
Hardware: PC → All
Comment 17•18 years ago
|
||
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008050614 Minefield/3.0pre and the steps to reproduce
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•