Bug 426852 - "flash object disappear after going back" [p=mats.palmgren@bredband.net (Mats Palmgren) r+sr=jst a=blocking1.9+]